--- a/src/css/gantt.less
+++ b/src/css/gantt.less
@@ -1,3 +1,12 @@
 egg {
   bacon: #123;
 }
+
+#gantt-target {
+  border: 1px solid black;
+}
+
+#gantt-container {
+  // max-width: 100px;
+  // overflow: auto;
+}
