--- a/src/index.jade
+++ b/src/index.jade
@@ -5,7 +5,9 @@ html
     link(href='css/style.css', rel='stylesheet')
   body
     h1 gantt.js test page
-    canvas#gantt-target
+    div#gantt-container
+      canvas#gantt-target
+    script(src='lib/underscore-min.js')
     script(src='lib/xdate.js')
     script(src='js/gantt.js')
     script(src='js/test-page.js')
