--- a/src/index.jade
+++ b/src/index.jade
@@ -5,6 +5,12 @@ html
     link(href='css/style.css', rel='stylesheet')
   body
     h1 gantt.js test page
+    form(onsubmit='return ganttFormSubmit();')
+      label(for='activityCount') Activity count: 
+      input#activityCount(value='8')
+      label(for='activityCount') Activity link rate: 
+      input#activityLinkRate(value='0.2')
+      input(type='submit')
     div#gantt-container
       canvas#gantt-target
     script(src='lib/underscore-min.js')
